// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`betterer > should exclude specific files from results 1`] = `
"// BETTERER RESULTS V2.
//
// If this file contains merge conflicts, use \`betterer merge\` to automatically resolve them:
// https://phenomnomnominal.github.io/betterer/docs/results-file/#merge
//
exports[\`test\`] = {
  value: \`{
    "src/exclude.ts:645618020": [
      [0, 0, 7, "RegExp match", "645618020"]
    ],
    "src/index.ts:645618020": [
      [0, 0, 7, "RegExp match", "645618020"]
    ]
  }\`
};
"
`;

exports[`betterer > should exclude specific files from results 2`] = `
"// BETTERER RESULTS V2.
//
// If this file contains merge conflicts, use \`betterer merge\` to automatically resolve them:
// https://phenomnomnominal.github.io/betterer/docs/results-file/#merge
//
exports[\`test\`] = {
  value: \`{
    "src/index.ts:645618020": [
      [0, 0, 7, "RegExp match", "645618020"]
    ]
  }\`
};
"
`;

exports[`betterer > should exclude specific files from results 3`] = `
[
  "🌟 Betterer (0ms):
",
  "🌟 Betterer (0ms): 1 test running...
🤔 test: running "test"!
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: "test" got checked for the first time! (2 issues) 🎉
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: "test" got checked for the first time! (2 issues) 🎉

1 test got checked. 🤔
1 test got checked for the first time! 🎉
",
  "🌟 Betterer (0ms):
",
  "🌟 Betterer (0ms): 1 test running...
🤔 test: running "test"!
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: "test" got better! (1 fixed issue, 1 remaining) 😍
・ 1 fixed issue in "fixtures/exclude-files/src/exclude.ts".
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: "test" got better! (1 fixed issue, 1 remaining) 😍
・ 1 fixed issue in "fixtures/exclude-files/src/exclude.ts".

1 test got checked. 🤔
1 test got better! 😍
",
]
`;
